added graph topology request & response
